--- a/views/dashboard/notes/create.html
+++ b/views/dashboard/notes/create.html
@@ -9,36 +9,31 @@
         <div class="field">
             <label class="label">Name</label>
             <div class="control">
-                <input class="input" type="text" placeholder="Name" name="name">
+                <input class="input {{'is-danger' if errors.name else ''}}" type="text" placeholder="Name" name="name">
             </div>
-            <p class="help">A name to describe the note</p>
-        </div>
-        <div class="field">
-            <label for="" class="label">Identifier</label>
-            <div class="control">
-                <label class="radio">
-                    <input type="radio" name="identifier" value="name">
-                    Name
-                  </label>
-                  <label class="radio">
-                    <input type="radio" name="identifier" checked value="id">
-                    Random ID
-                  </label>
-            </div>
+            {% if errors.name %}
+                <p class="help is-danger">{{errors.name[0]}}</p>
+            {% else %}
+                <p class="help">A name to describe the note</p>
+            {% endif %}
         </div>
         <div class="field">
             <label class="label">Content</label>
             <div class="control">
-                <textarea class="textarea" placeholder="Content" name="content"></textarea>
+                <textarea class="textarea {{'is-danger' if errors.content else ''}}" placeholder="Content" name="content" minlength="1" maxlength="5000"></textarea>
             </div>
-            <p class="help">The text that you want people to see</p>
+            {% if errors.content %}
+                <p class="help is-danger">{{errors.content[0]}}</p>
+            {% else %}
+                <p class="help">The text that you want to be seen</p>
+            {% endif %}
         </div>
         <div class="field">
             <label class="label">Password (optional)</label>
             <div class="control">
                 <input class="input" type="password" placeholder="Password" name="password" id="password">
             </div>
-            <p class="help">Adding a password will encrypt the note with the password and require viewers to enter it in order to view the note</p>
+            <p class="help">This field is required if you want the note to be encrypted on our servers</p>
         </div>
         <div class="field">
             <div class="control">
@@ -63,19 +58,6 @@
                 </label>
             </div>
             <p class="help">Hover for details</p>
-        </div>
-        <div class="field">
-            <label for="" class="label">Style</label>
-            <div class="control">
-                <label class="radio">
-                    <input type="radio" name="style" checked value="styled">
-                    Stylized
-                </label>
-                <label class="radio">
-                    <input type="radio" name="style" value="plaintext">
-                    Plaintext
-                </label>
-            </div>
         </div>
         <div class="field is-grouped">
             <div class="control">
