--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -11,16 +11,25 @@
     <div class="tile is-ancestor">
         <div class="tile is-parent">
             <article class="tile is-child box">
-                <p class="title">URL Shortener</p>
+                <p class="title"><a href="/admin/shortener">URL Shortener</a></p>
                 <p class="subtitle">There are {{counters["urls"]}} shortened urls</p>
             </article>
         </div>
         <div class="tile is-parent">
             <article class="tile is-child box">
-                <p class="title">Users</p>
+                <p class="title"><a href="/admin/users">Users</a></p>
                 <p class="subtitle">There are {{counters["users"]}} users with {{counters["sessions"]}} active sessions</p>
             </article>
         </div>
+        <div class="tile is-parent">
+            <article class="tile is-child box">
+                <p class="title"><a href="/admin/notes">Secure Notes</a></p>
+                <p class="subtitle">There are _ secure notes</p>
+            </article>
+        </div>
+    </div>
+
+    <div class="tile is-ancestor">
         <div class="tile is-parent">
             <article class="tile is-child box">
                 <p class="title">Application</p>
