--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -7,6 +7,7 @@
                     <ul class="menu-list">
                         <li><a href="/admin" class="{{'is-active' if request.rel_url.path == '/admin' else ''}}">Home</a></li>
                         <li><a href="/admin/shortener">URL Shortener</a></li>
+                        <li><a href="/admin/notes">Notes</a></li>
                         <li><a href="/admin/users" class="{{'is-active' if request.rel_url.path.startswith('/admin/users') else ''}}">Users</a></li>
                         <li><a href="/admin/application"  class="{{'is-active' if request.rel_url.path.startswith('/admin/application') else ''}}">Application</a></li>
                         <li><a href="/dashboard">Dashboard</a></li>
