--- a/views/dashboard/layout.html
+++ b/views/dashboard/layout.html
@@ -5,18 +5,16 @@
             <div class="column is-narrow">
                 <aside class="menu">
                     <ul class="menu-list"><li><a href="/dashboard" class="{{'is-active' if request.rel_url.path == '/dashboard' else ''}}">Home</a></li></ul>
-                    {% if user["authorized"] is true %}
-                        <p class="menu-label">
-                            Services
-                        </p>
-                        <ul class="menu-list">
-                            <li><a href="/dashboard/shortener" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/shortener') else ''}}">URL Shortener</a></li>
-                            <li><a href="/dashboard/notes" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/notes') else ''}}">Secure Notes</a></li>
-                            {% if user["admin"] %}
-                                <li><a href="/admin">Admin Dashboard</a></li>
-                            {% endif %}
-                        </ul>
-                    {% endif %}
+                    <p class="menu-label">
+                        Services
+                    </p>
+                    <ul class="menu-list">
+                        <li><a href="/dashboard/shortener" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/shortener') else ''}}">URL Shortener</a></li>
+                        <li><a href="/dashboard/notes" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/notes') else ''}}">Secure Notes</a></li>
+                        {% if user["admin"] is true %}
+                            <li><a href="/admin">Admin Dashboard</a></li>
+                        {% endif %}
+                    </ul>
                     <p class="menu-label">
                         User
                     </p>
