--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -8,33 +8,33 @@
     <h1 class="title">Hello</h1>
     <h2 class="subtitle mb-3">Welcome to the admin dashboard</h2>
 
-    <div class="tile is-ancestor">
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title"><a href="/admin/shortener">URL Shortener</a></p>
-                <p class="subtitle">There are {{counters["urls"]}} shortened urls</p>
-            </article>
-        </div>
-        <div class="tile is-parent">
-            <article class="tile is-child box">
+    <div class="columns is-multiline">
+        <div class="column is-4">
+            <div class="box">
                 <p class="title"><a href="/admin/users">Users</a></p>
                 <p class="subtitle">There are {{counters["users"]}} users with {{counters["sessions"]}} active sessions</p>
-            </article>
+            </div>
         </div>
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title"><a href="/admin/notes">Secure Notes</a></p>
-                <p class="subtitle">There are _ secure notes</p>
-            </article>
-        </div>
-    </div>
 
-    <div class="tile is-ancestor">
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">Application</p>
+        <div class="column is-4">
+            <div class="box">
+                <p class="title"><a href="/admin/shortener">URL Shortener</a></p>
+                <p class="subtitle">There are {{counters["urls"]}} shortened urls</p>
+            </div>
+        </div>
+
+        <div class="column is-4">
+            <div class="box">
+                <p class="title"><a href="/admin/notes">Secure Notes</a></p>
+                <p class="subtitle">There are {{counters["notes"]}} secure notes</p>
+            </div>
+        </div>
+
+        <div class="column is-4">
+            <div class="box">
+                <p class="title"><a href="/admin/application">Application</a></p>
                 <p class="subtitle">Currently running with {{stats["cpu_percent"]}}% CPU usage and {{stats["memory_percent"]}}% memory usage</p>
-            </article>
+            </div>
         </div>
     </div>
 {% endblock %}
