--- a/views/onboarding.html
+++ b/views/onboarding.html
@@ -10,6 +10,17 @@
             <div class="column is-5">
                 <form method="POST">
                     <h1 class="title">{{"Sign Up" if type == "signup" else "Login"}}</h1>
+                    {% if type == "signup" %}
+                        <div class="field">
+                            <label class="label">Invite Code</label>
+                            <div class="control">
+                                <input name="invite_code" class="input {{'is-danger' if invite_code_error else ''}}" type="text" placeholder="Your invite code" value="{{invite_code|d('')}}">
+                                {% if invite_code_error %}
+                                    <p class="help is-danger">{{invite_code_error[0]}}</p>
+                                {% endif %}
+                            </div>
+                        </div>
+                    {% endif %}
                     <div class="field">
                         <label class="label">Email</label>
                         <div class="control">
