more formatting and code style

--- a/templates/dashboard/notes/view.html.jinja
+++ b/templates/dashboard/notes/view.html.jinja
@@ -45,6 +45,7 @@
                 </div>
             </div>
         </div>
+    </div>
     
     {% if has_pw is true %}
         <script src="/static/js/show-pw.js"></script>
