--- a/templates/dashboard/notes/create.html.jinja
+++ b/templates/dashboard/notes/create.html.jinja
@@ -33,7 +33,7 @@
             <div class="control">
                 <input class="input" type="password" placeholder="Password" name="password" id="password">
             </div>
-            <p class="help">This field is required if you want the note to be encrypted on our servers</p>
+            <p class="help">This field is required if you want the content to be encrypted</p>
         </div>
         <div class="field">
             <div class="control">
