--- a/templates/dashboard/index.html.jinja
+++ b/templates/dashboard/index.html.jinja
@@ -8,15 +8,17 @@
     <h1 class="title">Hello</h1>
     <h2 class="subtitle mb-3">Welcome to the <code>mzf.one</code> dashboard</h2>
 
-    <div class="tile is-ancestor">
-        <div class="tile is-parent">
-            <article class="tile is-child box">
+    <div class="columns is-multiline">
+        <div class="column is-4">
+            <article class="box">
                 <p class="title"><a href="/dashboard/shortener">URL Shortener</a></p>
-                {% if url_count > 0 %}
-                    <p class="subtitle">You have {{url_count}} shortened URLs</p>
-                {% else %}
-                    <p class="subtitle">You haven't shortened any URLs</p>
-                {% endif %}
+                <p class="subtitle">You have {{url_count}} shortened URLs</p>
+            </article>
+        </div>
+        <div class="column is-4">
+            <article class="box">
+                <p class="title"><a href="/dashboard/notes">Secure Notes</a></p>
+                <p class="subtitle">You have {{notes_count}} secure notes</p>
             </article>
         </div>
     </div>
