--- a/templates/admin/index.html.jinja
+++ b/templates/admin/index.html.jinja
@@ -11,28 +11,28 @@
     <div class="columns is-multiline">
         <div class="column is-4">
             <div class="box">
-                <p class="title"><a href="/admin/users">Users</a></p>
+                <p class="title"><a href="{{ url_for('users.index') }}">Users</a></p>
                 <p class="subtitle">There are {{counters["users"]}} users with {{counters["sessions"]}} active sessions</p>
             </div>
         </div>
 
         <div class="column is-4">
             <div class="box">
-                <p class="title"><a href="/admin/shortener">URL Shortener</a></p>
+                <p class="title"><a>URL Shortener</a></p>
                 <p class="subtitle">There are {{counters["urls"]}} shortened urls</p>
             </div>
         </div>
 
         <div class="column is-4">
             <div class="box">
-                <p class="title"><a href="/admin/notes">Secure Notes</a></p>
+                <p class="title"><a>Secure Notes</a></p>
                 <p class="subtitle">There are {{counters["notes"]}} secure notes</p>
             </div>
         </div>
 
         <div class="column is-4">
             <div class="box">
-                <p class="title"><a href="/admin/application">Application</a></p>
+                <p class="title"><a href="{{ url_for('application.index') }}">Application</a></p>
                 <p class="subtitle">Currently running with {{stats["cpu_percent"]}}% CPU usage and {{stats["memory_percent"]}}% memory usage</p>
             </div>
         </div>
