--- a/templates/admin/users/edit.html.jinja
+++ b/templates/admin/users/edit.html.jinja
@@ -37,7 +37,7 @@
             <div class="field">
                 <div class="buttons">
                     <button class="button is-info" type="submit">Save</button>
-                    <a href="/admin/users/{{id}}/delete" class="button is-danger">Delete</a>
+                    <a href="{{ url_for('users.delete', user_id=id)}}" class="button is-danger">Delete</a>
                 </div>
             </div>
         </form>
