--- a/templates/dashboard/notes/index.html.jinja
+++ b/templates/dashboard/notes/index.html.jinja
@@ -52,7 +52,7 @@
             <tbody>
                 {% for note in values %}
                     <tr>
-                        <td><a href="/notes/{{note['id']}}" target="_blank" rel="noopener noreferrer" id="{{note['id']}}">{{note["id"]}}</a></td>
+                        <td><a href="{{ url_for('notes.view', note_id=note['id']) }}" target="_blank" rel="noopener noreferrer" id="{{note['id']}}">{{note["id"]}}</a></td>
                         <td>{{note['name']}}</td>
                         <td>{{note["has_password"]}}</td>
                         <td>{{note["share_email"]}}</td>
@@ -73,21 +73,21 @@
     <nav class="pagination is-centered">
         <ul class="pagination-list">
             {% if current_page != 1 %}
-                <li><a class="pagination-link" href="/dashboard/notes">1</a></li>
+                <li><a class="pagination-link" href="{{ url_for('notes.index') }}">1</a></li>
                 <li><span class="pagination-ellipsis">&hellip;</span></li>
                 {% if current_page != 2 %}
-                    <li><a class="pagination-link" href="/dashboard/notes?page={{current_page - 1}}">{{current_page - 1}}</a></li>
+                    <li><a class="pagination-link" href="{{ url_for('notes.index', query={'page': current_page - 1}) }}">{{current_page - 1}}</a></li>
                 {% endif %}
             {% endif %}
             <li><a class="pagination-link is-current">{{current_page}}</a></li>
             {% if current_page != max_pages %}
                 {% if current_page != max_pages - 1 %}
-                    <li><a class="pagination-link" href="/dashboard/notes?page={{current_page + 1}}">{{current_page + 1}}</a></li>
+                    <li><a class="pagination-link" href="{{ url_for('notes.index', query={'page': current_page + 1}) }}">{{current_page + 1}}</a></li>
                 {% endif %}
                 <li><span class="pagination-ellipsis">&hellip;</span></li>
-                <li><a class="pagination-link" href="/dashboard/notes?page={{max_pages}}">{{max_pages}}</a></li>
+                <li><a class="pagination-link" href="{{ url_for('notes.index', query={'page': max_pages}) }}">{{max_pages}}</a></li>
             {% endif %}
-            </ul>
+        </ul>
     </nav>
     <script src="/static/js/notes.js"></script>
 {% endblock main2 %}
