--- a/templates/dashboard/settings/shortener.html.jinja
+++ b/templates/dashboard/settings/shortener.html.jinja
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block main2 %}
-    <a class="button is-link mb-2" href="/dashboard/shortener/sharex">Download ShareX Config</a><br>
+    <a class="button is-link mb-2" href="{{ url_for('shortener.sharex') }}">Download ShareX Config</a><br>
     <a class="is-underlined" href="https://getsharex.com/docs/custom-uploader" target="_blank">ShareX Custom Uploader Docs</a>
 {% endblock %}
