--- a/templates/dashboard/shortener/layout.html.jinja
+++ b/templates/dashboard/shortener/layout.html.jinja
@@ -1,12 +1,14 @@
 {% extends 'dashboard/layout.html.jinja' %}
 
+{% import "macros.html.jinja" as macros with context %}
+
 {% block main %}
     <div class="title mb-3">URL Shortener</div>
 
     <div class="tabs mb-3">
         <ul>
-            <li class="{{'is-active' if request.rel_url.path == '/dashboard/shortener' }}"><a href="/dashboard/shortener">View All</a></li>
-            <li class="{{'is-active' if request.rel_url.path == '/dashboard/shortener/create' }}"><a href="/dashboard/shortener/create">Create</a></li>
+            {{macros.active_tab(url_for("shortener.index"), "View All")}}
+            {{macros.active_tab(url_for("shortener.create"), "Create")}}
             {% if alias %}
                 {% if request.rel_url.path == "/dashboard/shortener/" + alias + "/edit" %}
                     <li class="is-active"><a>Edit</a></li>
