--- a/templates/dashboard/shortener/partial_form.html.jinja
+++ b/templates/dashboard/shortener/partial_form.html.jinja
@@ -1,4 +1,4 @@
-<form method="POST" novalidate autocomplete="off">
+<form method="POST" autocomplete="off">
     <div class="field">
         <label class="label">Alias</label>
         <div class="field has-addons">
@@ -43,7 +43,7 @@
         {% elif type == "edit" %}
             <div class="buttons">
                 <button class="button is-info" type="submit">Save</button>
-                <a href="/dashboard/shortener/{{alias}}/delete" class="button is-danger">Delete</a>
+                <a href="{{ url_for('shortener.delete', alias=alias) }}" class="button is-danger">Delete</a>
             </div>
         {% endif %}
     </div>
