--- a/templates/dashboard/settings/account.html.jinja
+++ b/templates/dashboard/settings/account.html.jinja
@@ -29,6 +29,30 @@
                 {% endif %}
             </div>
         </div>
+
+        <label class="label">Session Duration</label>
+        <div class="field has-addons">
+            <div class="control">
+                <input class="input {{'is-danger' if session_duration_error else ''}}" type="number" name="session_duration_amount" value="{{session_duration.amount}}" min="1" max="60" required>
+                {% if session_duration_amount_error %}
+                    <p class="help is-danger">{{session_duration_amount_error[0]}}</p>
+                {% endif %}
+                {% if session_duration_unit_error %}
+                    <p class="help is-danger">{{session_duration_unit_error[0]}}</p>
+                {% endif %}
+            </div>
+            <div class="control">
+                <div class="select">
+                    <select name="session_duration_unit" required>
+                        <option value="minutes" {% if session_duration.unit == "minutes" %}selected{% endif %}>Minutes</option>
+                        <option value="hours" {% if session_duration.unit == "hours" %}selected{% endif %}>Hours</option>
+                        <option value="days" {% if session_duration.unit == "days" %}selected{% endif %}>Days</option>
+                        <option value="weeks" {% if session_duration.unit == "weeks" %}selected{% endif %}>Weeks</option>
+                        <option value="months" {% if session_duration.unit == "months" %}selected{% endif %}>Months</option>
+                    </select>
+                </div>
+            </div>
+        </div>
         
         <div class="field">
             <div class="buttons">
