typo in application

--- a/templates/admin/application.html.jinja
+++ b/templates/admin/application.html.jinja
@@ -26,7 +26,7 @@ Lines: {{code_stats["lines"]}}
 Files: {{code_stats["files"]}}
 Characters: {{code_stats["characters"]}}
 Classes: {{code_stats["classes"]}}
-Function: {{code_stats["functions"]}}
+Functions: {{code_stats["functions"]}}
 Coroutines: {{code_stats["coroutines"]}}
 Comments: {{code_stats["comments"]}}
     </pre>
