--- a/templates/admin/users/edit.html.jinja
+++ b/templates/admin/users/edit.html.jinja
@@ -1,4 +1,5 @@
 {% extends 'admin/users/layout.html.jinja' %}
+{% import "macros.html.jinja" as macros with context %}
 
 {% block title %}
     Editing user {{id}}
@@ -28,10 +29,8 @@
 
             <div class="field">
                 <label class="label">Email</label>
-                <input class="input {{'is-danger' if email_error else ''}}" type="email" value="{{email}}" name="email">
-                {% if email_error %}
-                    <p class="help is-danger">{{email_error[0]}}</p>
-                {% endif %}
+                <input class="input {{ macros.class_if_error('email') }}" type="email" value="{{email}}" name="email">
+                {{ macros.errors_and_help("email") }}
             </div>
 
             <div class="field">
