--- a/templates/dashboard/notes/create.html.jinja
+++ b/templates/dashboard/notes/create.html.jinja
@@ -1,4 +1,6 @@
 {% extends 'dashboard/notes/layout.html.jinja' %}
+{% import "macros.html.jinja" as macros with context %}
+
 
 {% block head %}
     <link rel="stylesheet" href="/static/css/textarea.css">
@@ -9,24 +11,16 @@
         <div class="field">
             <label class="label">Name</label>
             <div class="control">
-                <input class="input {{'is-danger' if errors.name else ''}}" type="text" placeholder="Name" name="name">
+                <input class="input {{ macros.class_if_error('name') }}" type="text" placeholder="Name" name="name">
             </div>
-            {% if errors.name %}
-                <p class="help is-danger">{{errors.name[0]}}</p>
-            {% else %}
-                <p class="help">A name to describe the note</p>
-            {% endif %}
+            {{ macros.errors_and_help("name", "A name that describes the note") }}
         </div>
         <div class="field">
             <label class="label">Content</label>
             <div class="control">
-                <textarea class="textarea {{'is-danger' if errors.content else ''}}" placeholder="Content" name="content" minlength="1" maxlength="5000"></textarea>
+                <textarea class="textarea {{ macros.class_if_error('content') }}" placeholder="Content" name="content" minlength="1" maxlength="5000"></textarea>
             </div>
-            {% if errors.content %}
-                <p class="help is-danger">{{errors.content[0]}}</p>
-            {% else %}
-                <p class="help">The text that you want to be seen</p>
-            {% endif %}
+            {{ macros.errors_and_help("content", "The content of the note") }}
         </div>
         <div class="field">
             <label class="label">Password (optional)</label>
