--- a/templates/dashboard/settings/invites.html.jinja
+++ b/templates/dashboard/settings/invites.html.jinja
@@ -1,4 +1,5 @@
 {% extends 'dashboard/settings/layout.html.jinja' %}
+{% import "macros.html.jinja" as macros with context %}
 
 {% block title %}
     Invites
@@ -11,7 +12,7 @@
             <div class="column is-5-desktop is-12-mobile pb-0">
                 <div class="field has-addons ">
                     <div class="control is-expanded">
-                        <input type="email" name="required_email" class="input {{'is-danger' if email_error else ''}}" placeholder="Email the user signing up must have">
+                        <input type="email" name="required_email" class="input {{ macros.class_if_error('required_email') }}" placeholder="Email the user signing up must have">
                     </div>
                     <div class="control">
                         <button type="submit" class="button is-info">Create Invite</button>
@@ -19,11 +20,7 @@
                 </div>
             </div>
         </div>
-        {% if email_error %}
-            <p class="help is-danger">{{email_error[0]}}</p>
-        {% else %}
-            <p class="help">Leave this field blank to allow any email to use the invite code</p>
-        {% endif %}
+        {{ macros.errors_and_help("required_email", "Leave this field blank to allow any email to use the invite code") }}
     </form>
 
     {% if invites != [] %}
