--- a/templates/dashboard/shortener/partial_form.html.jinja
+++ b/templates/dashboard/shortener/partial_form.html.jinja
@@ -1,3 +1,5 @@
+{% import "macros.html.jinja" as macros with context %}
+
 <form method="POST" autocomplete="off">
     <div class="field">
         <label class="label">Alias</label>
@@ -8,23 +10,17 @@
               </a>
             </p>
             <div class="control is-expanded">
-                <input class="input {{'is-danger' if alias_error}}" type="text" placeholder="Alias of the URL" name="alias" value="{{alias}}">
+                <input class="input {{ macros.class_if_error('alias') }}" type="text" placeholder="Alias of the URL" name="alias" value="{{alias}}">
             </div>
         </div>
-        {% if alias_error %}
-            <p class="help is-danger">{{alias_error[0]}}</p>
-        {% else %}
-            <p class="help">Leave this field blank to generate a random alias</p>
-        {% endif %}
+        {{ macros.errors_and_help("alias", "Leave this field blank to generate a random alias") }}
     </div>
 
     <div class="field">
         <label class="label">URL</label>
         <div class="control">
-            <input class="input {{'is-danger' if url_error}}" type="url" placeholder="Your long URL" name="destination" value="{{destination}}">
-            {% if url_error %}
-                <p class="help is-danger">{{url_error[0]}}</p>
-            {% endif %}
+            <input class="input {{ macros.class_if_error('destination') }}" type="url" placeholder="Your long URL" name="destination" value="{{destination}}">
+            {{ macros.errors_and_help("destination") }}
         </div>
     </div>
 
