--- a/templates/admin/users/layout.html.jinja
+++ b/templates/admin/users/layout.html.jinja
@@ -8,7 +8,7 @@
 
     <div class="tabs mb-3">
         <ul>
-            {{macros.active_tab(url_for("users.index"), "View All")}}
+            {{macros.active_tab(url_for("users.index"), "View All", "equals")}}
             {{macros.active_tab(url_for("users.create"), "Create")}}
             {% if request.rel_url.path.startswith("/admin/users") and request.rel_url.path.endswith("/edit") %}
                 <li class="is-active"><a>Edit</a></li>
